--- a/style.css
+++ b/style.css
@@ -1,175 +1,56 @@
-:root {
-  --cor-click: #126ae2; /* Click */
-  --cor-sombra: #0a599b; /* Azul Escuro */
-  --cor-text: black; /* Preto */
-  --cor-back1: #edf2f4; /* Azul claro */
-  --cor-back2: #6a937a; /* Verde Escuro */
-  
-  --md-sys-color-primary: #126ae2;
-  --md-sys-color-on-primary: #FFFFFF;
-  --md-sys-color-primary-container: #edf2f4;
-  --md-sys-color-on-primary-container: #002020;
-}
-
 body {
-  margin: 0px;
-  background-color: var(--cor-back1);
+    font-family: Arial, sans-serif;
+    line-height: 1.6;
+    margin: 0;
+    padding: 20px;
+    background-color: #f7f7f7;
 }
-
-@import url(https://fonts.googleapis.com/css?family=Arimo);
-
 header {
-  position: relative;
-  height: 35px;
-  top: 0px;
-  left: 0px;
-  rigth: 0px;
-  background-color: red;
-  padding: 30px;
-  display: block;
+    background: #004080;
+    color: #fff;
+    padding: 15px;
+    text-align: center;
 }
-
-#menu {
-  width: 50px;
-  background-color: blue;
-  padding: 10px;
-  position: absolute;
-  left: 0px;
-  top: 10px;
-  margin-left: 15px;
-  cursor: pointer;
+section {
+    background: white;
+    padding: 15px;
+    margin: 20px 0;
+    border-radius: 8px;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
 }
-
-#logo {
-  position: absolute;
-  top: 13px;
-  left: 50%;
-  transform: translate(-50%);
+h2 {
+    color: #004080;
 }
-
-.svg_logo{
-  width: 80px;
+.exercise {
+    background: #eef5ff;
+    border-left: 5px solid #004080;
+    padding: 10px;
+    margin-top: 10px;
 }
-
-.path_logo{
-  fill: var(--cor-click);
+pre {
+    background: #333;
+    color: #eee;
+    padding: 10px;
+    border-radius: 4px;
+    overflow-x: auto;
 }
-
-#perfil {
-  width: 50px;
-  background-color: green;
-  padding: 10px;
-  position: absolute;
-  right: 0px;
-  top: 10px;
-  margin-right: 15px;
+button {
+    background: #004080;
+    color: white;
+    padding: 6px 12px;
+    border: none;
+    cursor: pointer;
+    border-radius: 4px;
+    margin-top: 5px;
 }
-
-#mensagens {
-  position: relative;
-  background-color: white;
-  top: 0px;
-  left: 0px;
-  rigth: 0px;
-  padding: 15px;
-  margin: 20px;
-  border-radius: 10px;
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+button:hover {
+    background: #0060b3;
 }
-
-#user_name {
-  display: block;
-  font-size: 17pt;
+.resultado {
+    background: #fff8dc;
+    padding: 8px;
+    margin-top: 8px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    min-height: 20px;
 }
-
-#mns_box {
-  position: relative;
-  background-color: green;
-  top: 0px;
-  left: 0px;
-  rigth: 0px;
-  margin-top:5px;
-}
-
-#icon {
-  width: 18px;
-  display: inline-block;
-  vertical-align: top;
-  margin-top: 5px;
-}
-
-#mns {
-  padding: 5px;
-  width: 80%;
-  display: inline-block;
-}
-
-.material-symbols-outlined {
-  color: var(--cor-click);
-  font-variation-settings:
-  'FILL' 0,
-  'wght' 400,
-  'GRAD' 0,
-  'opsz' 24
-}
-
-.icoG {
-  font-size: 30px;
-}
-
-.icoP {
-  font-size: 18px;
-  /* vertical-align: middle; */ /* propriedade para deixar o icone centralizado na linha */
-}
-
-.font {
-  font-family: "Arimo", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: 400;
-  font-style: normal;
-  font-size: 11px;
-  color: var(--cor-text)
-}
-
-#menu_aba {
-  height: 100%;
-  width: 100%;
-  position: fixed;
-  top: 0;
-  left: 0;
-  background-color: white;
-  overflow-x: hidden;
-  transition: 0.5s;
-  z-index: 1;
-  display: none;
-  border-radius: 10px;
-}
-
-#menu_bot {
-  position: relative;
-  padding: 20px;
-  display: "block";
-  cursor: pointer;
-  font-family: "Arimo", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: 400;
-  font-style: normal;
-  font-size: 14pt;
-  color: var(--cor-click)
-  transition 0.5s;
-}
-
-#componentes {
-  position: relative;
-  background-color: white;
-  top: 0px;
-  left: 0px;
-  rigth: 0px;
-  padding: 15px;
-  margin: 20px;
-  border-radius: 10px;
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-}
-
-
-
